@@ -17,21 +17,23 @@ package com.apicatalog.jsonld.http.media;
 
 import java.util.Objects;
 
+import com.apicatalog.jsonld.StringUtils;
+
 /**
- * 
+ *
  * @see <a href="https://tools.ietf.org/html/rfc7231#section-3.1.1.1">Media Type</a>
  *
  */
 public final class MediaType {
 
     private static final String TYPE_APPLICATION = "application";
-    private static final String TYPE_TEXT = "text";    
+    private static final String TYPE_TEXT = "text";
     private static final String WILDCARD = "*";
-    
-    public static final MediaType HTML = new MediaType(TYPE_TEXT, "html"); 
-    
+
+    public static final MediaType HTML = new MediaType(TYPE_TEXT, "html");
+
     public static final MediaType JSON_LD = new MediaType(TYPE_APPLICATION, "ld+json");
-    
+
     public static final MediaType JSON = new MediaType(TYPE_APPLICATION, "json");
 
     public static final MediaType XHTML = new MediaType(TYPE_APPLICATION, "xhtml+xml");
@@ -39,7 +41,7 @@ public final class MediaType {
     public static final MediaType N_QUADS = new MediaType(TYPE_APPLICATION, "n-quads");
 
     public static final MediaType ANY = new MediaType(WILDCARD, WILDCARD);
-    
+
     private final String type;
     private final String subtype;
 
@@ -69,11 +71,11 @@ public final class MediaType {
     public String subtype() {
         return subtype;
     }
-    
+
     public MediaTypeParameters parameters() {
         return parameters;
     }
-    
+
     @Override
     public String toString() {
         return String.valueOf(type).concat("/").concat(subtype);
@@ -83,15 +85,15 @@ public final class MediaType {
         if (type == null || subtype == null) {
             throw new IllegalArgumentException();
         }
-        
+
         return new MediaType(type, subtype);
     }
-    
+
     public static final MediaType of(final String value) {
         if (value == null) {
             throw new IllegalArgumentException();
         }
-        if (value.isBlank()) {
+        if (StringUtils.isBlank(value)) {
             return null;
         }
         return new MediaTypeParser(value).parse();
