@@ -18,8 +18,9 @@ package com.apicatalog.jsonld.json;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
+
+import com.apicatalog.jsonld.StringUtils;
 
 import jakarta.json.Json;
 import jakarta.json.JsonArray;
@@ -39,7 +40,7 @@ public final class JsonUtils {
         if (text == null) {
             return value == null;
         }
-        
+
         if (value == null) {
             return false;
         }
@@ -54,12 +55,12 @@ public final class JsonUtils {
         if (JsonUtils.isObject(value)) {
             return value.asJsonObject().containsKey(text);
         }
-        
+
         return false;
     }
 
     public static final boolean isScalar(final JsonValue value) {
-        return value != null 
+        return value != null
                     && !ValueType.ARRAY.equals(value.getValueType())
                     && !ValueType.OBJECT.equals(value.getValueType())
                     ;
@@ -107,14 +108,14 @@ public final class JsonUtils {
 
     public static boolean isNotBoolean(JsonValue value) {
         return value == null
-                || (!ValueType.TRUE.equals(value.getValueType()) 
+                || (!ValueType.TRUE.equals(value.getValueType())
                         && !ValueType.FALSE.equals(value.getValueType()));
     }
-    
+
     public static boolean isNotNumber(JsonValue value) {
         return value == null || !ValueType.NUMBER.equals(value.getValueType());
     }
-    
+
     public static boolean isTrue(JsonValue value) {
         return value != null && ValueType.TRUE.equals(value.getValueType());
     }
@@ -148,7 +149,7 @@ public final class JsonUtils {
     }
 
     public static Collection<JsonValue> toCollection(JsonValue value) {
-        
+
         if (value == null) {
             return Collections.emptyList();
         }
@@ -157,31 +158,31 @@ public final class JsonUtils {
             return value.asJsonArray();
         }
 
-        return List.of(value); 
+        return Collections.singletonList(value);
     }
-    
+
     public static JsonArray toJsonArray(JsonValue value) {
-       return JsonUtils.isArray(value) 
-                    ? value.asJsonArray() 
+       return JsonUtils.isArray(value)
+                    ? value.asJsonArray()
                     : Json.createArrayBuilder().add(value).build()
                     ;
     }
 
     public static boolean isBlankString(JsonValue value) {
-        return isString(value) && ((JsonString) value).getString().isBlank();
+        return isString(value) && StringUtils.isBlank(((JsonString) value).getString());
     }
 
     public static JsonValue toJsonValue(String value) {
-        return value != null && !value.isBlank() 
+        return value != null && StringUtils.isNotBlank(value)
                     ? Json.createValue(value)
                     : JsonValue.NULL
                     ;
-    }    
- 
+    }
+
     public static boolean isNotEmptyArray(JsonValue value) {
         return isNotArray(value) || !value.asJsonArray().isEmpty();
     }
-    
+
     public static boolean isNotEmptyObject(JsonValue value) {
         return isNotObject(value) || !value.asJsonObject().isEmpty();
     }
