@@ -17,6 +17,7 @@ package com.apicatalog.jsonld.lang;
 
 import java.util.Arrays;
 
+import com.apicatalog.jsonld.StringUtils;
 import com.apicatalog.rdf.lang.RdfAlphabet;
 
 public final class LanguageTag {
@@ -26,20 +27,20 @@ public final class LanguageTag {
 
     /**
      * LANGTAG  ::= [a-zA-Z]+ ('-' [a-zA-Z0-9]+)*
-     * 
+     *
      * @see <a href="https://www.w3.org/TR/n-quads/#sec-grammar">N-Quads Grammar</a>
-     * 
+     *
      * @param languageTag to check
      * @return <code>true</code> if the provided value is well-formed language tag
-     * 
+     *
      */
     public static boolean isWellFormed(final String languageTag) {
-        
+
         if (languageTag == null) {
             throw new IllegalArgumentException();
         }
 
-        if (languageTag.isBlank()) {
+        if (StringUtils.isBlank(languageTag)) {
             return false;
         }
 
@@ -48,7 +49,7 @@ public final class LanguageTag {
         if (RdfAlphabet.ASCII_ALPHA.negate().test(chars[0])) {
             return false;
         }
-        
+
         if (chars.length == 1) {
             return true;
         }
