@@ -17,6 +17,7 @@ package com.apicatalog.jsonld.uri;
 
 import java.net.URI;
 
+import com.apicatalog.jsonld.StringUtils;
 import com.apicatalog.jsonld.lang.Keywords;
 
 public final class UriUtils {
@@ -26,24 +27,24 @@ public final class UriUtils {
 
     public static final boolean isURI(final String value) {
 
-        return value != null 
-                    && !value.isBlank() 
-                    && !Keywords.matchForm(value.strip())
-                    && create(value.strip()) != null;
+        return value != null
+                    && StringUtils.isNotBlank(value)
+                    && !Keywords.matchForm(StringUtils.strip(value))
+                    && create(StringUtils.strip(value)) != null;
     }
 
-    
+
     public static final URI create(final String uri) {
 
         if (uri == null) {
             throw new IllegalArgumentException("The uri cannot be null.");
         }
 
-        String uriValue = uri.strip();
-        
+        String uriValue = StringUtils.strip(uri);
+
         if (uri.endsWith(":")) {
             uriValue = uri + ".";
-            
+
         } else if (uri.endsWith("[") || uri.endsWith("]")) {
             uriValue = uri.substring(0, uri.length() - 1);
         }
@@ -51,18 +52,18 @@ public final class UriUtils {
         try {
 
             return URI.create(uriValue);
-            
+
         } catch (IllegalArgumentException e) {
             return null;
         }
     }
-    
+
     /**
      * Check if the provided URI ends with generic delimiter.
-     * 
+     *
      * @see <a href="https://tools.ietf.org/html/rfc3986#section-2.2">URI - Reserved
      *      Characters </a>
-     *      
+     *
      * @param uri to check
      * @return <code>true</code> if the provided URI ends with delimiter
      */
@@ -72,10 +73,10 @@ public final class UriUtils {
     }
 
     public static final boolean isNotURI(final String uri) {
-        return uri == null 
-                || (!uri.isBlank() 
-                        && (Keywords.matchForm(uri.strip())
-                        || create(uri.strip()) == null));
+        return uri == null
+                || (StringUtils.isNotBlank(uri)
+                        && (Keywords.matchForm(StringUtils.strip(uri))
+                        || create(StringUtils.strip(uri)) == null));
     }
 
     public static final boolean isNotAbsoluteUri(final String uri) {
@@ -88,14 +89,14 @@ public final class UriUtils {
     }
 
     public static final boolean isAbsoluteUri(final String uri) {
-        
+
         try {
             return URI.create(uri).isAbsolute();
         } catch (IllegalArgumentException e) {
             return false;
         }
     }
-    
+
     protected static final String recompose(final String scheme, final String authority, final String path, final String query, final String fragment) {
 
         final StringBuilder builder = new StringBuilder();
@@ -121,13 +122,13 @@ public final class UriUtils {
         }
         return builder.toString();
     }
-    
+
     protected static final boolean isDefined(final String value) {
-        return value != null && !value.isBlank();
+        return value != null && StringUtils.isNotBlank(value);
     }
 
     protected static final boolean isNotDefined(final String value) {
-        return value == null || value.isBlank();
+        return value == null || StringUtils.isBlank(value);
     }
 
 }
