@@ -23,6 +23,7 @@ import java.io.Reader;
 import java.io.Writer;
 import java.util.Collection;
 
+import com.apicatalog.jsonld.StringUtils;
 import com.apicatalog.jsonld.http.media.MediaType;
 import com.apicatalog.jsonld.lang.BlankNode;
 import com.apicatalog.jsonld.uri.UriUtils;
@@ -36,7 +37,7 @@ public final class Rdf {
 
     private Rdf() {
     }
-    
+
     public static final RdfGraph createGraph() {
         return RdfProvider.provider().createGraph();
     }
@@ -44,7 +45,7 @@ public final class Rdf {
     public static final Collection<MediaType> canRead() {
         return RdfProvider.provider().canRead();
     }
-    
+
     public static final RdfReader createReader(final MediaType contentType, Reader reader) throws UnsupportedContentException {
 
         if (reader == null || contentType == null) {
@@ -53,9 +54,9 @@ public final class Rdf {
 
         return RdfProvider.provider().createReader(contentType, reader);
     }
-    
+
     public static final RdfReader createReader(final MediaType contentType, final InputStream is) throws UnsupportedContentException {
-        
+
         if (is == null || contentType == null) {
             throw new IllegalArgumentException();
         }
@@ -66,9 +67,9 @@ public final class Rdf {
     public static final Collection<MediaType> canWrite() {
         return RdfProvider.provider().canWrite();
     }
-    
+
     public static final RdfWriter createWriter(final MediaType contentType, final Writer writer) throws UnsupportedContentException {
-        
+
         if (writer == null || contentType == null) {
             throw new IllegalArgumentException();
         }
@@ -77,7 +78,7 @@ public final class Rdf {
     }
 
     public static final RdfWriter createWriter(final MediaType contentType, final OutputStream os) throws UnsupportedContentException {
-        
+
         if (os == null || contentType == null) {
             throw new IllegalArgumentException();
         }
@@ -90,7 +91,7 @@ public final class Rdf {
     }
 
     public static final RdfTriple createTriple(RdfResource subject, RdfResource predicate, RdfValue object) {
-        
+
         if (subject == null || predicate == null || object == null) {
             throw new IllegalArgumentException();
         }
@@ -99,23 +100,23 @@ public final class Rdf {
     }
 
     public static final RdfNQuad createNQuad(RdfResource subject, RdfResource predicate, RdfValue object, RdfResource graphName) {
-        
-        if (subject == null) {            
+
+        if (subject == null) {
             throw new IllegalArgumentException("Subject cannot be null.");
         }
         if (predicate == null) {
             throw new IllegalArgumentException("Predicate cannot be null.");
         }
         if (object == null) {
-            throw new IllegalArgumentException("Object cannot be null.");            
+            throw new IllegalArgumentException("Object cannot be null.");
         }
 
         return RdfProvider.provider().createNQuad(subject, predicate, object, graphName);
     }
 
     public static final RdfNQuad createNQuad(RdfTriple triple, RdfResource graphName) {
-        
-        if (triple == null) {            
+
+        if (triple == null) {
             throw new IllegalArgumentException("Triple cannot be null.");
         }
 
@@ -123,85 +124,85 @@ public final class Rdf {
     }
 
     public static RdfValue createValue(String value) {
-        
+
         if (value == null) {
             throw new IllegalArgumentException();
         }
-        
+
         if (UriUtils.isAbsoluteUri(value)) {
             return RdfProvider.provider().createIRI(value);
         }
-        
+
         if (BlankNode.isWellFormed(value)) {
             return RdfProvider.provider().createBlankNode(value);
         }
-        
+
         return RdfProvider.provider().createTypedString(value, XsdConstants.STRING);
     }
 
     public static RdfLiteral createString(String lexicalForm) {
-        
+
         if (lexicalForm == null) {
             throw new IllegalArgumentException();
         }
-        
+
         return RdfProvider.provider().createTypedString(lexicalForm, XsdConstants.STRING);
     }
 
     public static RdfLiteral createTypedString(String lexicalForm, String dataType) {
-        
+
         if (lexicalForm == null) {
             throw new IllegalArgumentException();
         }
-        
+
         return RdfProvider.provider().createTypedString(lexicalForm, dataType);
     }
-    
+
     public static RdfLiteral createLangString(String lexicalForm, String langTag) {
-        
+
         if (lexicalForm == null) {
             throw new IllegalArgumentException();
         }
-        
+
         return RdfProvider.provider().createLangString(lexicalForm, langTag);
     }
 
     /**
      * Create a new {@link RdfResource}.
-     * 
+     *
      * @param resource is an absolute IRI or blank node identifier
-     * @return RDF resource 
+     * @return RDF resource
      * @throws IllegalArgumentException if the resource is not an absolute IRI or blank node identifier
      */
     public static RdfResource createResource(String resource) {
-        
+
         if (resource == null) {
             throw new IllegalArgumentException("The resource value cannot be null.");
         }
-        
+
         if (UriUtils.isAbsoluteUri(resource)) {
             return RdfProvider.provider().createIRI(resource);
         }
-        
+
         if (BlankNode.isWellFormed(resource)) {
             return RdfProvider.provider().createBlankNode(resource);
         }
-        
-        throw new IllegalArgumentException("The resource must be an absolute IRI or blank node identifier, but was [" + resource + "].");        
+
+        throw new IllegalArgumentException("The resource must be an absolute IRI or blank node identifier, but was [" + resource + "].");
     }
-    
+
     public static RdfResource createBlankNode(final String value) {
-        
-        if (value == null || value.isBlank()) {
+
+        if (value == null || StringUtils.isBlank(value)) {
             throw new IllegalArgumentException();
         }
 
         return RdfProvider.provider().createBlankNode(value);
     }
-    
+
     public static RdfResource createIRI(final String value) {
-        
-        if (value == null || value.isBlank()) {
+
+        if (value == null || StringUtils.isBlank(value)) {
             throw new IllegalArgumentException();
         }
 
